# arolariu.ro

./: .claudeignore  .copilotignore  .dockerignore  .editorconfig  .env.example  .filenesting.json  .gitattributes  .gitignore  .mcp.json  .npmrc  .nxignore  .pnp.cjs  .prettierignore  .prettierrc  .yarnrc.yml  AGENTS.md  AROLARIU.sln  CLAUDE.md  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT.md  LICENSE  PR577_FIXES_SUMMARY.md  README-MONOREPO.md  README.md  SECURITY.md  Untitled Diagram.drawio  arolariu.sln  arolariu.slnx  eslint.config.ts  jest.config.json  next.config.js  nx.json  package-lock.json  package.json  prettier.config.ts  settings.VisualStudio.json  tailwind.config.js  temp-invoices.json  (+7 more)
scripts-refactored/: COMPARISON.md  COMPLETE.md  Cargo.toml  INTEGRATION.md  MIGRATION_CHECKLIST.md  README.md  SUMMARY.md  benchmark.sh  tasks.ps1  tasks.sh  test-comprehensive.sh  test.sh
scripts-refactored/src/: common.rs  main.rs
sites/exp.arolariu.ro/: .dockerignore  .funcignore  AGENTS.md  Dockerfile  README.md  authz.py  catalog.py  config.docker.json  config.json  config.template.json  config_loader.py  conftest.py  function_app.py  function_app.test.py  main.py  main.test.py  models.py  project.json  pydoc-markdown.yml  pyproject.toml  requirements-dev.txt  requirements.txt
sites/experiments.arolariu.ro/: .funcignore  .gitignore  ConfigFunctions.cs  ConfigurationContracts.cs  Dockerfile  Program.cs  appsettings.json  config.json  config_loader.py  experiments.arolariu.ro.csproj  function_app.py  host.json  local.settings.json  pyproject.toml
(+3698 files in other folders)
