[package]
name = "arolariu-tasks"
version = "0.1.0"
edition = "2021"
authors = ["Alexandru-Razvan Olariu <admin@arolariu.ro>"]
description = "Rust-based task runner for arolariu.ro monorepo"

[[bin]]
name = "tasks"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive", "cargo"] }
tokio = { version = "1.40", features = ["full"] }
colored = "2.1"
indicatif = "0.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
which = "6.0"
anyhow = "1.0"
thiserror = "1.0"
futures = "0.3"
