[project]
name = "experiments-arolariu-ro"
version = "3.0.0"
description = "Configuration proxy service for arolariu.ro platform"
requires-python = ">=3.12"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
